Merged PR 466: fix(data-service): get SRID for tables
Related work items: #2027